# open-rebellion

./: .gitignore  CLAUDE.md  CREDITS.md  Cargo.toml  LICENSE  README.md  playtest-seed42.jsonl  sharpen-test
.github/workflows/: ci.yml  ghidra-site.yml
.subdaimon-output/: COMBAT-ANALYSIS-INDEX.md  PARITY_AUDIT_INDEX.md  UI_PARITY_GAP_ANALYSIS.md  combat-gaps-quickref.txt  combat-parity-gap-analysis.md  core-parity-gaps-complete-audit-2026-03-25.md  gap-quick-reference.md  implementation-checklist.md  seeding-parity-audit.md
agent_docs/: INDEX.md  architecture.md  assets.md  dat-formats.md  dll-resource-catalog.md  game-domain.md  game-media.md  ghidra-re.md  mod-runtime.md  modding.md  roadmap.md  save-load.md  seeding.md  simulation.md
agent_docs/references/: INDEX.md  catalog-planets.md  catalog-portraits.md  catalog-scenes.md  catalog-ships.md  catalog-weapons.md
agent_docs/systems/: ai-parity-tracker.md  betrayal.md  blockade.md  combat.md  death-star.md  jedi.md  research.md  uprising.md  victory.md
assets/references/: INDEX.md  VONG-TC-INDEX.md  renames.jsonl
autoresearch/run-001/: baseline-seed123.jsonl  baseline-seed42.jsonl  baseline-seed999.jsonl  final_config.json  history.json
configs/autoresearch/: default.json
crates/rebellion-app/: Cargo.toml
crates/rebellion-app/src/: audio.rs  main.rs
crates/rebellion-core/: Cargo.toml
crates/rebellion-data/: Cargo.toml
crates/rebellion-data/src/: integrator.rs  lib.rs  mods.rs  save.rs  seeds.rs  simulation.rs
crates/rebellion-data/tests/: telemetry_coverage.rs
crates/rebellion-playtest/: Cargo.toml
crates/rebellion-playtest/src/: logger.rs  main.rs
crates/rebellion-render/: Cargo.toml
data/: resource-entity-map.json
data/hd/: README.md
docs/: CHANGELOG.md  GAME-FLOW.md  INDEX.md  SOURCES.md  vong-total-conversion.md
docs/mechanics/: INDEX.md  blockade.md  bombardment.md  characters.md  death-star.md  diplomacy.md  economy.md  fleet-movement.md  fog-of-war.md  gnprtb.md  ground-combat.md  jedi.md  manufacturing.md  missions.md  (+6 more)
ghidra/: INDEX.md  README.md
ghidra-site/: mkdocs.yml
scripts/: autoresearch_loop.py  batch-rename-references.py  build-comparison-html.py  build-resource-entity-map.py  build-wasm.sh  compare.html  curate-references.py  eval_game_quality.py  extract-dll-resources.py  gemini-upscale.py  generate-rebellion-assets.py  generate-rebellion-models.py  package-macos.sh  package-web.sh  prepare-rebellion-models.sh  reference-packs.json  reference-viewer.html  render-sprite-sheets.py  select-references.py  sharpen-test.html  upscale-assets.py  vertex-upscale-batch.py  vertex-upscale.py
tools/dat-dumper/: Cargo.toml
tools/dat-dumper/src/: codec.rs  dat_record.rs  lib.rs  main.rs  registry.rs  validate.rs
tools/dat-dumper/src/types/: all_facilities.rs  capital_ships.rs  defense_facilities.rs  entity_table.rs  fighters.rs  fleets_seed.rs  general_params.rs  int_table.rs  major_characters.rs  manufacturing_facilities.rs  minor_characters.rs  missions.rs  mod.rs  production_facilities.rs  sectors.rs  seed_table.rs  side_params.rs  special_forces.rs  syfc_table.rs  systems.rs  textstra.rs  troops.rs
web/: index.html  open-rebellion.wasm
(+2478 files in other folders)
