[workspace]
members = [
    "crates/rebellion-core",
    "crates/rebellion-data",
    "crates/rebellion-render",
    "crates/rebellion-app",
    "crates/rebellion-playtest",
    "tools/dat-dumper",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
slotmap = { version = "1.0", features = ["serde"] }

[workspace.lints.clippy]
all = "warn"
needless_pass_by_value = "warn"
needless_return = "warn"
redundant_closure = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
