[package]
name = "rebellion-data"
version = "0.1.0"
edition = "2021"

[dependencies]
rebellion-core = { path = "../rebellion-core" }
dat-dumper = { path = "../../tools/dat-dumper" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
slotmap = { workspace = true }
toml = "0.8"
semver = "1"
bincode = "1"

# Hot reload: file watching on native only (no WASM support)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6"

[dev-dependencies]
tempfile = "3"
