[package]
name = "rebellion-playtest"
version = "0.1.0"
edition = "2021"

[dependencies]
rebellion-core = { path = "../rebellion-core" }
rebellion-data = { path = "../rebellion-data" }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_xoshiro = "0.6"
serde_json = { workspace = true }
anyhow = { workspace = true }
