[package]
name = "dat-dumper"
version = "0.1.0"
edition = "2021"

[lib]
name = "dat_dumper"
path = "src/lib.rs"

[[bin]]
name = "dat-dumper"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
pelite = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
